# annonces-backend

./: .env-local  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy-rust.sh  setup.sh
src/: main.rs
src/db/: mod.rs  product.rs  user.rs
src/models/: admin.rs  ads.rs  category.rs  mod.rs  product.rs  response.rs  user.rs
src/routes/: admin.rs  ads.rs  category.rs  mod.rs  product.rs  user.rs
src/tests/: mod.rs
