[package]
name = "rust-server-bin"
description = "Rocket.rs CRUD REST API for classified site"
version = "1.3.0"
edition = "2021"
authors = ["psychodrom <jamalkheyyad@gmail.com>"]
readme = "README.md"
repository = "https://github.com/psychodrom/annonces-backend"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
okapi = { version = "0.6.0-alpha-1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "secrets"] }
dotenv = "0.15.0"
mongodb = "2.3.1"
futures = "0.3"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

